--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,3 +1,20 @@
-<p>
-  login works!
-</p>
+<div class="container">
+  <div class="login-form mat-elevation-z8">
+    <div [formGroup]="authService.loginForm">
+      <h2 class="mat-h2">Login</h2>
+      <mat-form-field class="field-width">
+        <input matInput type="text" placeholder="Username" formControlName="username" required>
+        <mat-error>Username required</mat-error>
+      </mat-form-field>
+      <mat-form-field class="field-width">
+        <input matInput type="password" placeholder="Password" formControlName="password" required matInput>
+        <mat-error>Password is mandatory</mat-error>
+      </mat-form-field>
+      <button mat-raised-button class="field-width" color="primary" type="submit"
+        (click)="loginUser(authService.loginForm.value)" [disabled]="authService.loginForm.invalid">Login</button>
+    </div>
+    <div class="link">
+      <a href="/sign-up">Sign up</a>
+    </div>
+  </div>
+</div>
