--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,3 +1,13 @@
-<p>
-  profile works!
-</p>
+<mat-toolbar color="accent" class="mat-elevation-z4 toolbar">
+    <div>Socket.io-NG POC</div>
+    <div class="logout">
+        <div class="username">{{user.username}}</div>
+        <button mat-stroked-button class="mat-elevation-z4" color="#ffffff" type="submit" (click)="logout()">Logout</button>
+    </div>
+</mat-toolbar>
+<div class="align-center">
+  <h1 class="mat-h1 name">
+    <span class="greeting">Welcome</span> {{user.name | uppercase}}
+  </h1>
+  <h3 class="mat-h3 email">{{user.email}}</h3>
+</div>
