--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
         (click)="loginUser(authService.loginForm.value)" [disabled]="authService.loginForm.invalid">Login</button>
     </div>
     <div class="link">
-      <a href="/sign-up">Sign up</a>
+      <a href="/register">Sign up</a>
     </div>
   </div>
 </div>
